@@ -1,3 +1,8 @@
+2002-05-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* config/os/irix/irix5.2/bits/ctype_inline.h: Cast to unsigned
+	char.
+
 2002-05-02  Phil Edwards  <pme@gcc.gnu.org>
 
 	* docs/html/faq/index.html:  Update list in #4.1.
